Colocando as informações do cabeçalho

--- a/Site/index.html
+++ b/Site/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css" type="text/css"/>
-    <link rel="stylesheet" href="index.css" type="text/css"/> 
+    <link rel="stylesheet" href="./Styles/reset.css" type="text/css"/>
+    <link rel="stylesheet" href="./Styles/index.css" type="text/css"/> 
  
 
     <title>Piupiuwer - Faça novos amigos</title>
 </head>
 <body>
+    <header>
+        <img  id="Logo" src="../Site/Image/Header/Nome da empresa.png" alt="Logo Piupiuwer">
+        <div id="Search">
+            <input type="text" placeholder="Search on Piupiuwer">
+            <img  id="Assuntosgerais" src="../Site/Image/Header/Lupa.png" alt="Icone de assuntos gerais">
+        </div>
+
+        <img  id="Assuntosgerais" src="../Site/Image/Header/icone_de_assuntos_gerais.png" alt="Icone de assuntos gerais">
+        <img  id="Emalta" src="../Site/Image/Header/em_alta.png" alt="Icone de em alta">
+
+    </header>
+
     
-
-
     <script src="Programação.js"></script>
 </body>
 </html>
