--- a/Site/index.html
+++ b/Site/index.html
@@ -12,16 +12,22 @@
 </head>
 <body>
     <header>
-        <img  id="Logo" src="../Site/Image/Header/Nome da empresa.png" alt="Logo Piupiuwer">
+        <img  id="Nome" src="../Site/Image/Header/Nome da empresa.png" alt="Nome Piupiuwer">
         <div id="Search">
             <input type="text" placeholder="Search on Piupiuwer">
-            <img  id="Assuntosgerais" src="../Site/Image/Header/Lupa.png" alt="Icone de assuntos gerais">
+            <img  id="Assuntosgerais" src="../Site/Image/Header/Lupa.png" alt="Assuntos gerais">
         </div>
-
-        <img  id="Assuntosgerais" src="../Site/Image/Header/icone_de_assuntos_gerais.png" alt="Icone de assuntos gerais">
-        <img  id="Emalta" src="../Site/Image/Header/em_alta.png" alt="Icone de em alta">
-
-    </header>
+        <div id="Icones">
+            <div id="Assuntos">
+                <img  id="Assuntosgerais" src="../Site/Image/Header/icone_de_assuntos_gerais.png" alt="Icone de assuntos gerais">
+                <img  id="Emalta" src="../Site/Image/Header/em_alta.png" alt="Em alta">
+            </div>
+                <img  id="Perfil" src="../Site/Image/Header/Perfil.png" alt="Perfil">
+        </div>
+        </header>
+        <nav>
+            <img  id="Logo" src="../Site/Image/Header/Pena logo.png" alt="Logo Piupiuwer">
+        </nav>
 
     
     <script src="Programação.js"></script>
