Fiz o design do Aside
Construi todo o aside

--- a/Site/index.html
+++ b/Site/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Styles/reset.css" type="text/css"/>
     <link rel="stylesheet" href="./Styles/index.css" type="text/css"/> 
- 
+    <link rel="icon" href="Image/nev/Pena logo.png">
 
     <title>Piupiuwer - Faça novos amigos</title>
 </head>
@@ -26,10 +26,29 @@
         </div>
         </header>
         <nav>
-            <img  id="Logo" src="../Site/Image/Header/Pena logo.png" alt="Logo Piupiuwer">
+            <img  id="Logo" src="../Site/Image/nev/Pena logo.png" alt="Logo Piupiuwer">
         </nav>
-
-    
+        <aside>
+            <div id="esquerdo">
+                <div id="iconesabas">
+                    <ul>
+                        <li><img class="abas" src="../Site/Image/aside/Home.png" alt="Home"></li>
+                        <li><img class="abas" src="../Site/Image/aside/Explore.png" alt="Explore"></li>
+                        <li><img class="abas" src="../Site/Image/aside/Notifications.png" alt="Notifications"></li>
+                        <li><img class="abas" src="../Site/Image/aside/Messages.png" alt="Messages"></li>
+                        <li><img class="abas" src="../Site/Image/aside/More tools.png" alt="More tools"></li>
+                    </ul>
+                </div>
+                <div id="piu">
+                    <img id="piu" src="../Site/Image/aside/Write your piu.png" alt="Write your piu">
+                </div>
+            </div>
+        </aside>
+        <!----
+        <section>
+        </section>
+        -->
+         
     <script src="Programação.js"></script>
 </body>
 </html>
