Fiz o click das reações

--- a/Site/index.html
+++ b/Site/index.html
@@ -128,9 +128,9 @@
 
 
         </div>
-        <script src="../Programação/Programaçãodaspessoas.js"></script>
-        <script src="../Programação/Programaçãodospius.js"></script>
-        <script src="../Programação/Reações.js"></script>
+        <script src="../Site/Programação/Programaçãodaspessoas.js"></script>
+        <script src="../Site/Programação/Programaçãodospius.js"></script>
+        <script src="../Site/Programação/Reações.js"></script>
         
     </body>
     </html>     
